--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 
 .container {
-	max-width: 504px;
+	max-width: 498px;
 	float: left;
 	margin: 0 auto;
 	text-align: center;
@@ -27,12 +27,18 @@ body {
 	color: white;
 	float: left;
 	margin: 5px;
-	border: 4px solid white;
+	border: 2px solid white;
 }
 .lannister {
-	background-image:url("");
+	background-image:url(../img/lannister-small.jpg);
+	background-size: contain;
 }
 .stark {
-	background-image:url("");
+	background-image:url(../img/stark-small.jpg);
+	background-size: contain;
 }
 .row{clear:both;}
+
+.player {
+	opacity: 0.6;
+}
