--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,28 @@ h1 {
 	color: white;
 	text-align: center;
 	font-size: 100px;
+	margin-top: -30px;
 
 }
 
+h2 {
+	font-family: Cardo;
+	color: white;
+	text-align: center;
+	font-size: 20px;
+	margin-top: -80px;
+}
+/*h2:hover {
+	-webkit-transform: scale(1,1.2);
+}*/
+
 .container {
-	position: absolute;
+	position: relative;
 	max-width: 612px;
 	float: left;
 	top:50%;
     left:50%;
-    margin:-30px 0 0 -306px;
-
+    margin:45px 0 0 -306px;
 }
 /*.houses {
 	max-width: 320px;
